# Air-Traffic-Management-Deep-MARL

./: CMakeLists.txt  LICENSE  README.md  TD3.py  airport.h  airport_data.json  atm_interface.cpp  atm_interface.h  atm_sim.cpp  atm_sim.h  crl_td3.py  environment_boundaries.json  evaluate.py  heading.h  macro.h  main  main.cpp  readme.md  replay_buffer.py  rint.h  run_model.py  test.py  traffic.cpp  traffic.h  utils.cpp  utils.h
N_5_AGENT_AWARENESS/: actor.pt  actor_targ.pt  qf1.pt  qf1_targ.pt  qf2.pt
RL/: ATMSim_wrap.py  actor.py  critic.py  ddpg_agent.py  ddpg_network.py  main.py  meta_policy.py  noise.py  replay_buffer.py
atmsim/: airport.h  airport_data.json  atm_interface.cpp  atm_interface.h  atm_sim.cpp  atm_sim.h  atmosphere.cpp  atmosphere.h  heading.h  macro.h  main  main.cpp  pywrapper.cpp  rint.h  traffic.cpp  traffic.h  utils.cpp  utils.h  weather.h
basic_N_3_NO_AWARENESS/: actor_targ.pt  output.csv  qf1_targ.pt  qf2.pt
basic_N_5_NO_AWARENESS/: actor.pt  actor_targ.pt  output.csv  qf1.pt  qf1_targ.pt  qf2.pt  qf2_targ.pt
models/: actor.pt  actor_targ.pt  qf1.pt  qf1_targ.pt  qf2.pt  qf2_targ.pt
results/: altitudes.csv  distance.csv  infringements.txt  lifespans.csv  speeds.csv
saved_models/1024_N_5_final_obs/: output.csv
saved_models/N_5_1024_awareness/: output.csv
saved_models/N_5_30_obs/: actor.pt  actor_targ.pt  output.csv  qf1.pt  qf1_targ.pt  qf2.pt  qf2_targ.pt
saved_models/N_5_AGENT_AWARENESS/: output.csv  qf2_targ.pt
saved_models/N_5_COOP_REWARD_GARBAGE/: actor.pt  actor_targ.pt  output.csv  qf1.pt  qf1_targ.pt  qf2.pt  qf2_targ.pt
saved_models/N_5_Good_coop_reward/: actor.pt  actor_targ.pt  output.csv  qf1.pt  qf1_targ.pt  qf2.pt  qf2_targ.pt
saved_models/basic_N_3_NO_AWARENESS/: actor.pt  qf1.pt  qf2_targ.pt
saved_models/final_1024/: output.csv
saved_models/final_pre_131/: output.csv
saved_models/final_pre_131_2/: output.csv
saved_models/good/: output.csv
saved_models/looking_good_n5_new_rwd/: output.csv
